2003-07-24  Richard Williamson   <rjw@apple.com>

	Fixed 3279910.  Change the way we draw dragged link to use
	WebKit's measurement and drawing.  Also made the look match
	the bookmarks bar text.

        Reviewed by Maciej.

        * Misc.subproj/WebKitNSStringExtras.h:
        * Misc.subproj/WebKitNSStringExtras.m:
        (-[NSString _web_drawDoubledAtPoint:withTopColor:bottomColor:font:]):
        * WebView.subproj/WebHTMLViewPrivate.h:
        * WebView.subproj/WebHTMLViewPrivate.m:
        (-[WebHTMLView _dragImageForLinkElement:]):
        (-[WebHTMLView _handleMouseDragged:]):

2003-07-24  Richard Williamson   <rjw@apple.com>

	Removed unnecessary log.

        Reviewed by John.

        * WebCoreSupport.subproj/WebImageRendererFactory.m:
        (-[WebImageRendererFactory imageRendererWithData:MIMEType:]):
	
	Add another check to use ATSU for Limbu (Unicode 4.0) script.
	Also made shouldUseATSU inline.

        * WebCoreSupport.subproj/WebTextRenderer.m:
        (shouldUseATSU):

=== Safari-90 ===

2003-07-23  Maciej Stachowiak  <mjs@apple.com>

	Build breakage fix:
	
	Fix WebKit to build with the latest Foundation.
	
        * Misc.subproj/WebNSURLExtras.h:
        * Misc.subproj/WebNSURLExtras.m:
        (-[NSURL _webkit_isJavaScriptURL]):
        (-[NSURL _webkit_scriptIfJavaScriptURL]):
        (-[NSURL _webkit_isFTPDirectoryURL]):
        (-[NSString _webkit_isFTPDirectoryURL]):

2003-07-23  Richard Williamson   <rjw@apple.com>

	Fixed 3311725:  Added support for key/value binding. 
	(As a side effect also made icon loading work!  In 1.0
	it doesn't work unless a secret preference value is set.)

        Reviewed by Ken.

        * Misc.subproj/WebIconDatabase.m:
        (-[WebIconDatabase _createFileDatabase]):
        * WebView.subproj/WebDataSourcePrivate.m:
        (-[WebDataSource _startLoading:]):
        (-[WebDataSource _setTitle:]):
        (-[WebDataSource _updateIconDatabaseWithURL:]):
        * WebView.subproj/WebFramePrivate.m: